solved that the dropdown menu is horizontally aligned

--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,4 +1,9 @@
 /* main html */
+.show {
+  display: flex !important;
+}
+
+
 .central {
     text-align: center;
   }
