--- a/src/src/components/App/styles.scss
+++ b/src/src/components/App/styles.scss
@@ -1,5 +1,5 @@
-//@import "reset-css/reset.css";
-//@import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
+@import "reset-css/reset.css";
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
 body {
   background-color: $bg-color;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
@@ -9,6 +9,9 @@ body {
 .App {
   width: 80%;
   margin: 0 auto;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: $dark-blue;
 }
 
 .mainViewWrapper {
